<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ResultActivity">

        <TextView
            android:id="@+id/headLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/details"
            android:layout_marginStart="20dp"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:drawablePadding="5dp"
            app:drawableStartCompat="@drawable/round_arrow_back_ios_new_24"
            app:drawableTint="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/resultCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/headLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_margin="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/your_bmi_is"
                android:textSize="22sp"
                android:textColor="@color/colorText"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp">

                <TextView
                    android:id="@+id/resultValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:textColor="@color/colorText"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unit"
                    android:textSize="20sp"
                    android:textColor="@color/colorText"
                    android:textStyle="normal"
                    android:layout_marginStart="10dp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/resultStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal"
                android:textSize="18sp"
                android:textColor="@color/colorText"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/checkAnotherBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:background="@drawable/round_cornered_button"
        android:text="@string/check_another"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:elevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/resultCard" />

</androidx.constraintlayout.widget.ConstraintLayout>