<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/headLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="5dp"
            android:text="@string/bmi"
            android:textColor="@color/colorPrimary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calculator"
            android:textColor="@color/colorText"
            android:textSize="24sp"
            android:textStyle="normal" />

    </LinearLayout>

    <TextView
        android:id="@+id/contentText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:ellipsize="middle"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/head_content"
        android:textColor="@color/colorText"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/headLayout" />

    <LinearLayout
        android:id="@+id/genderLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/contentText">

        <androidx.cardview.widget.CardView
            android:id="@+id/maleCard"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:elevation="12dp"
            app:cardCornerRadius="100dp">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="140dp"
                android:contentDescription="@string/app_name"
                android:paddingTop="5dp"
                android:src="@drawable/man" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/femaleCard"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="20dp"
            android:elevation="12dp"
            app:cardCornerRadius="100dp">

            <ImageView
                android:layout_width="130dp"
                android:layout_height="140dp"
                android:contentDescription="@string/app_name"
                android:paddingTop="5dp"
                android:src="@drawable/woman" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/heightCard"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/genderLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_margin="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age"
                android:textColor="@color/colorText"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@color/colorText"
                android:textSize="24sp"
                android:textStyle="bold"/>

            <com.google.android.material.slider.Slider
                android:id="@+id/ageSlider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:valueFrom="0"
                android:valueTo="100"
                app:labelBehavior="gone"
                app:thumbColor="@color/colorPrimary"
                app:trackColor="@color/colorText"
                app:trackHeight="10dp"
                app:thumbRadius="15dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/weightAgeCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="5dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/heightCard">

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:elevation="10dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/weight"
                        android:textAlignment="center"
                        android:textColor="@color/colorText"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kg"
                        android:textAlignment="center"
                        android:textColor="@color/colorText"
                        android:textSize="11sp"
                        android:layout_marginStart="5dp"
                        android:textStyle="normal" />

                </LinearLayout>

                <TextView
                    android:id="@+id/weightText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorText"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/weightIncrementBtn"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_cornered_left_button"
                        android:text="@string/plus"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:elevation="5dp"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/weightDecrementBtn"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:background="@drawable/round_cornered_right_button"
                        android:text="@string/minus"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:elevation="5dp"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:elevation="10dp"
            android:padding="10dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/height"
                        android:textAlignment="center"
                        android:textColor="@color/colorText"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cm"
                        android:textAlignment="center"
                        android:textColor="@color/colorText"
                        android:textSize="11sp"
                        android:layout_marginStart="5dp"
                        android:textStyle="normal" />

                </LinearLayout>

                <TextView
                    android:id="@+id/heightText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:textAlignment="center"
                    android:textColor="@color/colorText"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/heightIncrementBtn"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/round_cornered_left_button"
                        android:text="@string/plus"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:elevation="5dp"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/heightDecrementBtn"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:background="@drawable/round_cornered_right_button"
                        android:text="@string/minus"
                        android:textColor="@color/white"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:elevation="5dp"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calculateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/round_cornered_button"
        android:text="@string/calculate"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:elevation="5dp"
        app:layout_constraintTop_toBottomOf="@id/weightAgeCard" />

</androidx.constraintlayout.widget.ConstraintLayout>